--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@heroui/input": "^2.4.10",
     "@heroui/system": "^2.4.7",
     "@heroui/theme": "^2.4.6",
+    "@heroui/tooltip": "^2.2.8",
     "framer-motion": "^11.18.1",
     "lucide-react": "^0.473.0",
     "react": "^18.3.1",
