--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@heroui/button": "^2.2.10",
     "@heroui/image": "^2.2.6",
     "@heroui/input": "^2.4.10",
+    "@heroui/select": "^2.4.10",
     "@heroui/system": "^2.4.7",
     "@heroui/theme": "^2.4.6",
     "@heroui/tooltip": "^2.2.8",
