--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@heroui/theme": "^2.4.6",
     "@heroui/tooltip": "^2.2.8",
     "framer-motion": "^11.18.1",
+    "gsap": "^3.12.7",
     "lucide-react": "^0.473.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
