update: consistent button colors, input and textarea fields, overall ui improvement

--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@heroui/button": "^2.2.10",
+    "@heroui/checkbox": "^2.3.9",
+    "@heroui/date-picker": "^2.3.10",
     "@heroui/image": "^2.2.6",
     "@heroui/input": "^2.4.10",
     "@heroui/select": "^2.4.10",
+    "@heroui/skeleton": "^2.2.6",
     "@heroui/system": "^2.4.7",
     "@heroui/theme": "^2.4.6",
     "@heroui/tooltip": "^2.2.8",
