--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "^0.473.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
     "styled-components": "^6.1.14"
