--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
+    "sonner": "^1.7.4",
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
