--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroui/autocomplete": "^2.3.11",
+    "@heroui/avatar": "^2.2.7",
     "@heroui/button": "^2.2.10",
     "@heroui/checkbox": "^2.3.9",
     "@heroui/date-picker": "^2.3.10",
+    "@heroui/divider": "^2.2.6",
     "@heroui/image": "^2.2.6",
     "@heroui/input": "^2.4.10",
     "@heroui/select": "^2.4.10",
@@ -20,6 +23,7 @@
     "@heroui/system": "^2.4.7",
     "@heroui/theme": "^2.4.6",
     "@heroui/tooltip": "^2.2.8",
+    "axios": "^1.7.9",
     "framer-motion": "^11.18.1",
     "gsap": "^3.12.7",
     "lucide-react": "^0.473.0",
