--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,10 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
+    "ioredis": "^5.5.0",
     "nodemailer": "^6.10.0",
+    "rate-limit-redis": "^4.2.0",
+    "sequelize": "^6.37.5",
     "winston": "^3.17.0"
   },
   "devDependencies": {
