--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
     "sonner": "^1.7.4",
+    "stripe": "^17.6.0",
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
