--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "nodemailer": "^6.10.0",
     "rate-limit-redis": "^4.2.0",
     "sequelize": "^6.37.5",
+    "serverless-http": "^3.2.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
