--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.7.9",
     "framer-motion": "^11.18.1",
     "gsap": "^3.12.7",
+    "lenis": "^1.1.20",
     "lucide-react": "^0.473.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
